--- a/barstool/index.html
+++ b/barstool/index.html
@@ -1,1 +1,88 @@
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title> barstool by reelyActive </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/socket.js"></script>
+    <script type="text/javascript" src="js/state.js"></script>
+    <link rel="stylesheet" href="style/main.css"/>
+  </head>
 
+  <body ng-app="state">
+    <div ng-controller="InteractionCtrl">
+
+      <!----- Menu ----->
+      <div id="menu">
+        <ul>
+          <li><a ng-click="selectTransmitter()" ng-class="tabclass.transmitter">Transmitter</a></li>
+          <li><a ng-click="selectReceiver()" ng-class="tabclass.receiver">Receiver</a></li>
+          <li><a ng-click="selectEvents()" ng-class="tabclass.events">Events</a></li>
+        </ul>
+      </div>
+
+      <!----- D3 (Transmitter & Receiver) ----->
+      <div ng-controller="ChartCtrl">
+
+        <div ng-show="show.transmitter">
+          <form class="apiUrl">
+            API Root: &nbsp;
+            <input type="text" ng-model="apiRoot" size="30"/>
+            &nbsp; Transmitter ID: &nbsp;
+            <input type="text" ng-model="transmitterId" size="16"/>
+            <button ng-click="setTransmitterUrl()">Update</button>
+          </form>
+          <h1>RSSI in Time</h1>
+          <p> Tracking {{transmitterId}} </p> 
+
+
+	  <p>With the following receivers</p>
+	  <ul>
+	    <li data-ng-repeat="x in receiversArray">
+		<button style = 'background-color: #E3E1B8' ng-click="toggle({{ $index }})">
+		{{ x }}
+		</button>
+
+	    </li>
+	  </ul>
+
+
+          <div style="padding:30px" linear-chart chart-data="rssiSamples"></div>
+        </div>
+
+        <div ng-show="show.receiver">
+          <form class="apiUrl">
+            API Root: &nbsp;
+            <input type="text" ng-model="apiRoot" size="30"/>
+            &nbsp; Receiver ID: &nbsp;
+            <input type="text" ng-model="receiverId" size="16"/>
+            <button ng-click="setReceiverUrl()">Update</button>
+          </form>
+	  
+          <div style="padding:30px" bar-chart chart-data="rssiSamples"></div>
+           
+        </div>
+
+      </div>
+
+      <!----- socket.io (Events) ----->
+      <div ng-controller="SocketCtrl" ng-show="show.events">
+        <form class="apiUrl">
+          Socket URL:
+          <input type="text" ng-model="socket.url" size="50" readonly/>
+        </form>
+        <div ng-repeat="(id, event) in events">
+          <div>
+            <pre> {{id}}: {{event}} </pre>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer id="footer">
+      <a href="https://github.com/reelyactive/barstool"> barstool </a>
+      &nbsp; | &nbsp;
+      <a href="http://context.reelyactive.com"> &copy; reelyActive 2015 </a>
+    </footer>
+  </body>
+</html>
